# mathmakerlib

./: .coveragerc  .gitignore  .pylintrc  .travis.yml  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTORS.rst  MANIFEST.in  README.md  README.rst  appveyor.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
docs/: Makefile  conf.py  dev_doc.rst  dev_index.rst  index.rst  user_doc.rst  user_index.rst
docs/include/: overview.rst  start_working.rst
mathmakerlib/: __init__.py  colors_names.py  config.py  constants.py  exceptions.py  locale_patch.py  mmlib_constants.py  mmlib_setup.py  pkg_required.py  required.py  requires.py  shared.py
mathmakerlib/LaTeX/: __init__.py  attr_list.py  commands.py  environment.py  texlive.profile
mathmakerlib/calculus/: __init__.py  clocktime.py  exponented.py  fraction.py  number.py  table.py  tools.py  unit.py
mathmakerlib/core/: __init__.py  callout.py  dimensional.py  drawable.py  evaluable.py  oriented.py  printable.py  signed.py  tools.py  word.py
mathmakerlib/geometry/: __init__.py  angle.py  bipoint.py  callout.py  dividedlinesegment.py  linesegment.py  point.py  pointspair.py  rectangle_grid.py  tools.py  vector.py  xaxis.py
mathmakerlib/locale/: mathmakerlib.pot
tests/: conftest.py  tools.py
tests/00_main/: 00_metadata_test.py  01_exceptions_test.py  02_config_test.py  exceptions_test.py  mmlib_setup_test.py
tests/01_LaTeX/: 01_attr_list_test.py  02_commands_test.py  03_environment_test.py
tests/01_core/: drawable_test.py  locale_patch_test.py
tests/02_calculus/: 03_unit_test.py  04_number_test.py  05_fraction_test.py  10_exponented_test.py
tests/02_core/: 01_coretools_test.py  callout_test.py  drawable_test.py  locale_patch_test.py
tests/03_calculus/: 01_tools_test.py  02_word_test.py  03_unit_test.py  04_number_test.py  05_fraction_test.py  06_clocktime_test.py  07_table_test.py  10_exponented_test.py
tests/03_geometry/: 01_point_test.py  02_linesegment_test.py  04_vector_test.py  05_angle_test.py  10_polygon_test.py  11_triangle_test.py  12_righttriangle_test.py  13_equilateraltriangle_test.py  14_isoscelestriangle_test.py  (+6 more)
tests_compilations/: calculus_test.py  compilation_manager.py  geometry_test.py
toolbox/: callout_positioning.ods  callout_positioning.py  merge_py_updates_to_main_pot_file.py  update_pot_files
(+162 files in other folders)
