[tool.poetry]
name = "mathmakerlib"
version = "0.7.16"
description = "Collection of lualatex-printable mathematical objects, including geometric shapes."
authors = ["Nicolas Hainaux <nh.techn@posteo.net>"]
license = "GPL-3.0-or-later"
readme = 'README.rst'
include = ['pyproject.toml']

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
flake8 = "^4.0.1"
coveralls = "^3.3.1"
coverage = "^6.3.1"

[tool.poetry.group.dev.dependencies]
pytest-mock = "^3.10.0"

[build-system]
# requires = ["poetry-core>=1.0.0"]
# build-backend = "poetry.core.masonry.api"
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"
