[tool.poetry]
name = "mathmakerlib"
version = "0.7.26"
description = "Collection of lualatex-printable mathematical objects, including geometric shapes."
authors = ["Nicolas Hainaux <nh.techn@posteo.net>"]
license = "GPL-3.0-or-later"
readme = 'README.rst'
include = ['pyproject.toml']

[tool.poetry.dependencies]
python = "^3.9"
sympy = "^1.13.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.1"
flake8 = "^4.0.1"
coveralls = "^3.3.1"
coverage = "^6.3.1"
pytest-mock = "^3.10.0"
polib = "^1.2.0"
toml-cli = "^0.7.0"
exitstatus = "^2.6.0"
twine = "^6.0.1"

[build-system]
# requires = ["poetry-core>=1.0.0"]
# build-backend = "poetry.core.masonry.api"
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"
