[tool.poetry]
name = "mathmakerlib"
version = "0.7.30"
description = "Collection of lualatex-printable mathematical objects, including geometric shapes."
authors = ["Nicolas Hainaux <nh.techn@posteo.net>"]
license = "GPL-3.0-or-later"
readme = 'README.rst'
include = ['pyproject.toml']

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
sympy = "^1.13.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
flake8 = "^7.1.2"
coveralls = "^4.0.1"
coverage = "^7.7.1"
pytest-mock = "^3.14.0"
polib = "^1.2.0"
exitstatus = "^2.6.0"
twine = "^6.1.0"

[build-system]
# requires = ["poetry-core>=1.0.0"]
# build-backend = "poetry.core.masonry.api"
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"
